# nugundam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
notebooks/: example_2Dcorr.ipynb  example_angular.ipynb  example_marked_correlation.ipynb  example_projected_auto.ipynb  example_projected_cross.ipynb
notebooks/data/: DATA.fits  DR7-lrg-d4000.fits
src/nugundam/: __init__.py  angular_public.py  ascii_io.py  aux_mock.py  cflibfor.f90  cflibfor.py  cflibfor.pyf  io.py  marked.py  plotting.py  projected_public.py  result_meta.py
src/nugundam/angular/: __init__.py  api.py  estimators.py  fortran_bridge.py  models.py  prepare.py
src/nugundam/core/: __init__.py  catalogs.py  common.py  jackknife.py  progress.py
src/nugundam/projected/: __init__.py  api.py  estimators.py  fortran_bridge.py  models.py  prepare.py
tests/: conftest.py  test_autogrid_modes.py  test_binning_api.py  test_config_describe.py  test_estimators_auto.py  test_estimators_cross.py  test_generic_inputs.py  test_jackknife_helpers.py  test_jackknife_plotting.py  test_marked_api.py  test_plotting_api.py  test_prepare_sbounds.py  test_progress.py  test_projected_estimators.py  test_projected_io_plot.py  test_projected_plot2d.py  test_projected_public_api.py  test_public_api_monkeypatch.py  test_public_io_plot.py  test_pxorder_modes.py  test_result_methods_ascii.py  test_split_random_feature.py
