[project]
name = "nugundam"
license = {file = "LICENSE"}
version = "0.7"
description = "nuGUNDAM: a toolkit for angular and projected correlations"
readme = "README.md"
authors = [
    { name = "Emilio Donoso", email = "emiliodon@gmail.com.ar" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib",
  "astropy",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pandas",
  "pyarrow",
  "ipython",
]

[build-system]
requires = ["scikit-build-core>=0.10", "numpy>=1.24"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/nugundam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
